# events-dsl

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.ae  sample_underwater.ae  sample_underwater.et
.github/workflows/: bencher.yml  build-test.yml  mdbook-deploy.yml  pr_bechmarks_closed.yml
benches/: Cargo.toml  see_through_translucent.rs
benches/data/: bench_script.et
book/: book.toml  index.js  package.json
book/src/: SUMMARY.md  analysis.md  eldritch-trace.md  faq.md  getting_started.md  user_guide.md
book/src/lrm/: lrm.md  pattern.md  predicates.md  rule.md  sequence.md  sets.md  src.md
book/theme/: et-highlight.js
encoding_spec/: Cargo.toml
encoding_spec/src/: bits.rs  lib.rs  main.rs  parser.rs  pattern.rs  trie.rs
et-core/: Cargo.toml
et-core/src/: bits.rs  lib.rs  repetition.rs
et-dsl/: Cargo.toml
et-dsl/src/: ast.rs  error.rs  evaluate.rs  lexer.rs  lib.rs  model.rs  parse.rs
et-dsl/tests/: ast_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_model_tests.rs
et-encoding/: Cargo.toml
et-encoding/src/: bits.rs  lib.rs  main.rs  parser.rs  pattern.rs  trie.rs
et-python/: Cargo.toml
et-sys/: Cargo.toml
examples/: sample_underwater.et  underwater_v6.et
md_parse/: Cargo.toml
md_parse/src/: bits.rs  lib.rs  main.rs  pattern.rs  trie.rs
spec/: dsl.ebnf  dsl.pest  dsl_ebnf.ebnf  dsl_v4.ebnf  encoding_spec.dot  encoding_spec.md  underwater_v1.ae  underwater_v2.ae  underwater_v3.ae  underwater_v4.ae  underwater_v5.ae
src/: ast.rs  error.rs  evaluate.rs  expr.rs  lib.rs  main.rs  model.rs  parse.rs  token.rs  tokenizer.rs
syntax/: eldritch-trace.vim
tests/: ast_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_model_tests.rs
