[package]
name = "filter-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
#aetherus-events = { git = "https://github.com/aetherus-wg/aetherus-events", version = "^0.1.7" }
aetherus-events = { path = "../aetherus-events", version = "^0.1.8" }
ariadne = "0.6.0"
chumsky = "0.12.0"
itertools = "0.14.0"
encoding_spec = { path = "./encoding_spec", version = "^0.1.0" }
