[package]
name = "eldritch-dsl"
version = "0.6.0"
edition = "2024"

[dependencies]
aetherus-events = { git = "https://github.com/aetherus-wg/aetherus-events", version = "^0.1.8" }
ariadne = "0.6.0"
chumsky = "0.12.0"
itertools = "0.14.0"
encoding_spec = { path = "./encoding_spec", version = "^0.1.0" }
log = "0.4.29"
env_logger = "0.11.10"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"

[dev-dependencies]
rand = "0.10.1"
