[workspace]
members = [
  "et-core",
  "et-encoding",
  "et-dsl",
  "et-sys",
  "et-python",
]
resolver = "3"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.package]
version = "0.6.1"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/aetherus-wg/eldritch-trace"

[workspace.dependencies]
et-encoding = { path = "et-encoding", version = "^0.6.0" }
et-core = { path = "et-core", version = "^0.6.0" }
et-dsl = { path = "et-dsl", version = "^0.6.0" }

aetherus-events = { git = "https://github.com/aetherus-wg/aetherus-events", version = "^0.1.8" }
ariadne = "0.6.0"
chumsky = "0.12.0"
itertools = "0.14.0"
log = "0.4.29"
env_logger = "0.11.10"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
markdown-ppp = "2.9.2"
regex = "1.12.3"
