[package]
name = "eldritch-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
criterion = { version = "^0.8.2", features = ["html_reports"] }

[dependencies]
et-dsl.workspace = true
et-encoding.workspace = true
et-core.workspace = true
aetherus-events.workspace = true
anyhow.workspace = true
flate2 = "1.0"
tar = "0.4"

[[bench]]
name = "see_through_translucent"
path = "see_through_translucent.rs"
harness = false
