[package]
name = "et-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rustc-version.workspace = true
description = "Eldritch-Trace core data structs"
repository.workspace = true

[dependencies]
aetherus-events.workspace = true
anyhow.workspace = true

[lints]
workspace = true

[dev-dependencies]
rand = "0.10.1"
