[package]
name = "et-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
rustc-version.workspace = true
description = "Eldritch-Trace DSL parser, semantic logic and CLI"
repository.workspace = true


[dependencies]
et-core.workspace = true
et-encoding.workspace = true
aetherus-events.workspace = true

ariadne.workspace = true
chumsky.workspace = true
itertools.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true
csv.workspace = true

[dev-dependencies]
cargo-husky = "1.5.0"
rand = "0.10.1"

[lints]
workspace = true
