[package]
name = "et-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
rustc-version.workspace = true
description = "Eldritch-Trace encoding extraction from .md spec which feeds pattern matching and DSL parser field nomenclature"
repository.workspace = true

[dependencies]
aetherus-events.workspace = true
anyhow.workspace = true
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
markdown-ppp.workspace = true
regex.workspace = true

[lints]
workspace = true
